--- a/styles/partials/_generalFlexGrid.scss
+++ b/styles/partials/_generalFlexGrid.scss
@@ -13,6 +13,16 @@
     background-color: $projectColorDarkPink; 
     padding: 20px;
 }
+.box {
+    flex: 0 0 30%; /* Adjust width to fit four boxes per line */
+    margin: 10px; /* Add margin for spacing */
+    height: 25px;
+    background-color: $projectColorDarkPink; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: $projectColorWhite;
+}
 
 .grid-container {
     background-color: $projectColorLightGrey;
